[package]
version = "0.1.0"
edition = "2021"
name = "task-manager"
authors = ["Lorenzo Costa <http://www.costa86.tech>"]
description = "A fully-fladged CLI task managager"
license = "AGPL-3.0-or-later"
keywords = ["cli", "task", "management", "productivity"]
repository = "https://github.com/costa86/task-manager"
documentation = "https://docs.rs/task-manager/"

[dependencies]
chrono = "0.4"
rusqlite = "0.28.0"
home = "0.5.3"
dialoguer = "0.10.2"
colored = "2.0.0"
tabled = "0.8.0"
